# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
if (defined(ohos_lite)) {
  static_library("init_log") {
    sources = [ "init_log.c" ]
    defines = [
      "_GNU_SOURCE",
      "OHOS_LITE",
      "INIT_LOG_INIT=1",
    ]
    include_dirs = [
      "//base/hiviewdfx/hilog_lite/interfaces/native/kits",
      "//base/startup/init_lite/interfaces/innerkits/include",
    ]
    deps = [
      "//third_party/bounds_checking_function:libsec_static",
      "//base/hiviewdfx/hilog_lite/frameworks/featured:hilog_static"
    ]
  }
} else {
  import("//build/ohos.gni")
  ohos_static_library("init_log") {
    sources = [ "init_log.c" ]
    defines = [ "INIT_DMESG" ]
    deps = [ "//third_party/bounds_checking_function:libsec_static" ]
    include_dirs = [ "//base/startup/init_lite/interfaces/innerkits/include" ]
    part_name = "startup"
    subsystem_name = "startup"
  }

  ohos_shared_library("agent_log") {
    sources = [ "init_log.c" ]
    defines = [ "INIT_AGENT" ]
    deps = [ "//third_party/bounds_checking_function:libsec_static" ]
    include_dirs = [ "//base/startup/init_lite/interfaces/innerkits/include" ]
    part_name = "startup"
    install_images = [
      "system",
      "updater",
    ]
    external_deps = [ "hilog_native:libhilog_base" ]
    install_enable = true
    part_name = "init"
    subsystem_name = "startup"
  }
}
